--- a/front/styleCreateCard.css
+++ b/front/styleCreateCard.css
@@ -7,6 +7,7 @@
 body {
     background: linear-gradient(45deg, rgb(255, 162, 162),rgb(162, 255, 243)) no-repeat center center fixed;
     font-family: Arial, Helvetica, sans-serif;
+    
     background-size: cover;
     min-height:100%;
     justify-content: center;
@@ -112,8 +113,8 @@ height: 50px;
   -ms-grid-column: 2;
   grid-area: health;
   font-weight: bold;
-  font-size: 20px;
-  text-align: right;
+
+  text-align: center;
 }
 
 select #type {
@@ -132,6 +133,15 @@ select #type {
   overflow: hidden;
   cursor: pointer;
   background-color: white;
+  text-align: center;
+}
+
+.avatar-file-checked {
+  display: none;
+  color: green;
+  text-align: center;
+  font-weight: bold;
+  justify-content: center;
 }
 .attack{
 margin-top: -16px;
@@ -173,8 +183,11 @@ margin-top: -16px;
   margin: 0 20px;
   border: 2px solid #e7c30d;
   box-shadow: 1px 1px 5px black;
+  font-family: Arial, Helvetica, sans-serif;
+  
   display: -ms-grid;
   display: grid;
+  padding-top: 10px;
   text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -526,6 +539,7 @@ form input, form select, form textarea ,form select{
 
 select {
     cursor: pointer;
+    width: 20px;
 }
 
 
