--- a/front/myCards.css
+++ b/front/myCards.css
@@ -181,10 +181,18 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(44,9,121,1) 35%, rgba
   border: 5px solid #e7c30d;
    box-shadow: 1px 1px 20px  black;;
   overflow: hidden;
+  position: relative;
 }
 
 .character-img img {
   height: 100%;
+  width: 100%;
+     /*Méthode de centrage en fonction de la taille de l'image */
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     object-fit: cover; 
 }
 
 .character-meta {
