--- a/front/styleCreateCard.css
+++ b/front/styleCreateCard.css
@@ -290,11 +290,18 @@ margin-top: -16px;
     border: 5px solid #e7c30d;
      box-shadow: 1px 1px 20px  black;;
     overflow: hidden;
+    position: relative;
   }
   
   .character-img img {
     height: 100%;
-    object-fit: cover;
+    width: 100%;
+     /*Méthode de centrage en fonction de la taille de l'image */
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     object-fit: cover; 
   }
   
   .character-meta {
