--- a/front/styleCreateCard.css
+++ b/front/styleCreateCard.css
@@ -193,6 +193,7 @@ margin-top: -16px;
       -ms-flex-align: center;
           align-items: center;
           margin-top: -15px;
+          font-size: 12px;
 }
 
 
@@ -394,6 +395,7 @@ margin-top: -16px;
   
   .character-description {
     height: 40px;
+    width: 380px;
     margin: 0 20px;
     border: 2px solid #e7c30d;
     box-shadow: 1px 1px 5px black;
@@ -403,6 +405,7 @@ margin-top: -16px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+            white-space: pre-wrap;
   }
   
   
